--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server/index",
-    "start": "npm run dev"
+    "start": "node server/index"
   },
   "keywords": [],
   "author": "",
