--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "07-restserver",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.16.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,8 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "colors": "^1.3.3",
+    "express": "^4.17.1",
+    "mongoose": "^5.6.1",
+    "mongoose-unique-validator": "^2.0.3",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
